--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>James Scott</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,10 +22,10 @@
           <a href="#">Home</a>
         </li>
         <li>
-          <a href="#">About me</a>
+          <a href="#">About Me</a>
         </li>
         <li>
-          <a href="#">Services</a>
+          <a href="#">Skill Set</a>
         </li>
         <li>
           <a href="#">Projects</a>
@@ -39,7 +41,8 @@
     <div class="hero-container">
       <h1>Crafting Exceptional Websites That Inspire Success</h1>
       <p>
-        As a freelance web developer, I specialise in creating sleek, 
+        As a freelance web developer,
+        I specialise in creating sleek, 
         user-friendly websites tailored to your unique needs.
         Let me transform your online presence and help you achieve your business goals.
       </p>
@@ -50,23 +53,41 @@
   <section class="about-me">
     <div class="about-container">
       <div class="about-info">
+        <div>Hello I am</div>
         <h2>
-          Hi, I am James
+         JAMES SCOTT
         </h2>
         <div class="job-title">
-          Frontend developer
+          I am a Frontend developer
         </div>
-        <p>
-          I specialise in creating responsive, user-friendly websites tailored to your needs. 
-          From design to deployment, I ensure your online presence stands out and performs seamlessly.
+        <p class="personal-description">
+          I specialise in creating responsive, 
+          user-friendly websites tailored to your needs. 
+          From design to deployment, 
+          I ensure your online presence stands out and performs seamlessly.
         </p>
       </div>
       <div class="img-placeholder">my picture</div>
     </div>
-
   </section>
   
-  <main></main>
+  <main>
+    <h3>
+      Technical Skill Set
+    </h3>
+    <div>Constantly learning and keeping myself up-to-date with the latest tech in frontend development!</div>
+    <div class="skills-container">
+      <div class="html-container">
+        <div>HTML</div>
+        <p>
+          I always prefer semantic markup and keep accesibility in mind while writing my html.
+          I keep the structure consistent so that it can be targeted well with CSS & can be scaled further.
+        </p>
+        <div class="tags">HTML5</div>
+        <div class="tags">SEMANTIC</div>
+      </div>
+    </div>
+  </main>
   
   <footer></footer>
 
