--- a/index.html
+++ b/index.html
@@ -75,19 +75,69 @@
     <h3>
       Technical Skill Set
     </h3>
-    <div>Constantly learning and keeping myself up-to-date with the latest tech in frontend development!</div>
+    <div class="ambition-text">Constantly learning and keeping myself up-to-date with the latest tech in frontend development!</div>
     <div class="skills-container">
-      <div class="html-container">
-        <div>HTML</div>
+      <div class="specific-container">
+        <div class="skill-title">HTML</div>
         <p>
           I always prefer semantic markup and keep accesibility in mind while writing my html.
           I keep the structure consistent so that it can be targeted well with CSS & can be scaled further.
         </p>
-        <div class="tags">HTML5</div>
-        <div class="tags">SEMANTIC</div>
+        <div class="tags">
+          <div>HTML5</div>
+          <div>SEMANTIC</div>
+        </div>          
+      </div>
+
+      <div class="specific-container">
+        <div class="skill-title">CSS</div>
+        <p>
+          I always prefer semantic markup and keep accesibility in mind while writing my html.
+          I keep the structure consistent so that it can be targeted well with CSS & can be scaled further.
+        </p>
+        <div class="tags">
+          <div>FLEXBOX</div>
+          <div>RESPONSIVE DESIGN</div>
+        </div>
       </div>
     </div>
   </main>
+
+  <section class="projects">
+    <h4>
+      Projects
+    </h4>
+    <p class="project-sub">
+      A few of my public web-design projects that I created myself!
+    </p>
+    <div class="project-grouper">
+      <div class="project-container">
+        <div class="project-name">Project Name</div>
+        <p class="project-description">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Ratione, explicabo, ut laudantium quibusdam amet dignissimos ea eligendi porro molestias nihil quisquam fuga 
+          libero quidem at accusantium ipsa corporis repellat nemo?
+        </p>
+        <div class="project-cta-container">
+          <button class="project-button">Live Preview</button>
+          <button class="project-button">GitHub</button>
+        </div>
+      </div>
+
+      <div class="project-container">
+        <div class="project-name">Project Name</div>
+        <p class="project-description">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Ratione, explicabo, ut laudantium quibusdam amet dignissimos ea eligendi porro molestias nihil quisquam fuga 
+          libero quidem at accusantium ipsa corporis repellat nemo?
+        </p>
+        <div class="project-cta-container">
+          <button class="project-button">Live Preview</button>
+          <button class="project-button">GitHub</button>
+        </div>
+      </div>
+    </div>
+  </section>
   
   <footer></footer>
 
