--- a/index.html
+++ b/index.html
@@ -136,10 +136,111 @@
           <button class="project-button">GitHub</button>
         </div>
       </div>
+
+      <div class="project-container">
+        <div class="project-name">Project Name</div>
+        <p class="project-description">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Ratione, explicabo, ut laudantium quibusdam amet dignissimos ea eligendi porro molestias nihil quisquam fuga 
+          libero quidem at accusantium ipsa corporis repellat nemo?
+        </p>
+        <div class="project-cta-container">
+          <button class="project-button">Live Preview</button>
+          <button class="project-button">GitHub</button>
+        </div>
+      </div>
+
+      <div class="project-container">
+        <div class="project-name">Project Name</div>
+        <p class="project-description">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Ratione, explicabo, ut laudantium quibusdam amet dignissimos ea eligendi porro molestias nihil quisquam fuga 
+          libero quidem at accusantium ipsa corporis repellat nemo?
+        </p>
+        <div class="project-cta-container">
+          <button class="project-button">Live Preview</button>
+          <button class="project-button">GitHub</button>
+        </div>
+      </div>
+
+      <div class="project-container">
+        <div class="project-name">Project Name</div>
+        <p class="project-description">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Ratione, explicabo, ut laudantium quibusdam amet dignissimos ea eligendi porro molestias nihil quisquam fuga 
+          libero quidem at accusantium ipsa corporis repellat nemo?
+        </p>
+        <div class="project-cta-container">
+          <button class="project-button">Live Preview</button>
+          <button class="project-button">GitHub</button>
+        </div>
+      </div>
+
+      <div class="project-container">
+        <div class="project-name">Project Name</div>
+        <p class="project-description">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Ratione, explicabo, ut laudantium quibusdam amet dignissimos ea eligendi porro molestias nihil quisquam fuga 
+          libero quidem at accusantium ipsa corporis repellat nemo?
+        </p>
+        <div class="project-cta-container">
+          <button class="project-button">Live Preview</button>
+          <button class="project-button">GitHub</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact">
+    <h5>Contact</h5>
+    <div class="contact-container">
+      <div class="personal-contact">
+        <div class="email-container">
+          <image class="contact-icon"></image>
+          <div>Email</div>
+          <div>myemail@gmail.com</div>
+        </div>
+        <div class="phone-container">
+          <image></image>
+          <div>Phone</div>
+          <div>07123456789</div>
+        </div>
+      </div>
+
+      <form action="#" method="post">
+        <label for="name">Name</label><br>
+        <input type="text" id="name"><br>
+
+        <label for="email">Email</label><br>
+        <input type="email" id="email"><br>
+
+        <label for="msg">Message</label><br>
+        <textarea name="comment" id="msg"></textarea><br>
+
+        <input type="submit">
+      </form>
     </div>
   </section>
   
-  <footer></footer>
+  <footer>
+    <div class="footer-container">
+      <h6>James</h6>
+      <div class="footer-link">
+        <ul>
+          <li>
+            <a href="#">Skills</a>
+          </li>
+          <li>
+            <a href="#">Projects</a>
+          </li>
+          <li>
+            <a href="#">Contact Me</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
